[package]
name = "prng3d"
version = "0.2.0-a"
edition = "2024"
authors = ["vbxq"]

[dependencies]
wgpu = "23"
pollster = "0.4"
bytemuck = { version = "1.21", features = ["derive"] }
egui = "0.30"
egui-wgpu = "0.30"
egui-winit = "0.30"
winit = "0.30"
crossbeam = "0.8"
parking_lot = "0.12"
glam = { version = "0.29", features = ["bytemuck"] }

# not open source for now, you can use another language and adapt the code
aelys = { git = "ssh://git@github.com/vbxq/aelys_lang.git" }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = false
debug = true
overflow-checks = false
debug-assertions = false
rpath = false